# pixelmatch-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: integration_test.rs
