[package]
name = "pixelmatch-rs"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
structopt = { version = "0.3.21", optional = true }

[dev-dependencies]
paste = "1.0.4"

[lib]
name = "pixelmatch"

[features]
build-binary = ["structopt"]

[[bin]]
name = "pixelmatch"
path = "./src/main.rs"
required-features = ["build-binary"]
