[package]
name = "pixelmatch"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Pixel-level image comparison"
homepage = "https://github.com/dfrankland/pixelmatch-rs"
repository = "https://github.com/dfrankland/pixelmatch-rs"
keywords = ["image", "diff", "pixel", "match", "visual"]
categories = ["development-tools", "visualization", "command-line-utilities"]
documentation = "https://docs.rs/pixelmatch"

[dependencies]
image = "0.23.12"
structopt = { version = "0.3.21", optional = true }

[dev-dependencies]
paste = "1.0.4"

[lib]
name = "pixelmatch"

[features]
build-binary = ["structopt"]

[[bin]]
name = "pixelmatch"
path = "./src/main.rs"
required-features = ["build-binary"]
